syntax = "proto3";
import "p2p/proto/common.proto";

message Event {
    Felt252  from_address = 1;
    repeated Felt252 keys = 2;
    repeated Felt252 data = 3;
}

message EventsRequest {
    Iteration iteration = 1;
}

// can be several in a single reply
message EventsResponse {
    message Events {
        repeated Event items = 1;
    }

    uint64   block_number = 1;
    Hash block_hash = 2;

    oneof responses {
        Events events = 3;
        Fin    fin    = 4;
    }
}
